--- a/counter.html
+++ b/counter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE hmtl> 
-<html lang="en">
+<html lang="zh-CN">
     <head>
-        <meta charset="utf8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
         <title>Counter</title>
         <link rel="stylesheet" type="text/css" href="css/counter.css" />
     </head>
@@ -46,6 +46,6 @@
                 <td><input type="button" class="button" value="." /></td>
             </tr>
         </table>
-        <script type="text/javascript" src="javascript/counter.js"></script>
+        <script type="text/javascript" src="js/counter.js"></script>
     </body>
 </html>
