--- a/hexconvert.html
+++ b/hexconvert.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
     <head>
-        <meta charset="utf8" /> 
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>HexConvert</title> 
-        <link rel="stylesheet" type="text/css" href="css/hexconvert.css" />
+        <link rel="stylesheet" type="text/css" href="css/hexConvert.css" />
     </head>
     <body>
         <fieldset>
@@ -100,7 +100,7 @@
             <input type="text" name="result" id="result" placeholder="转换的结果" readonly="readonly" /><br />
             <button type="button" id="swap">转换</button>
         </fieldset>
-        <script type="text/javascript" src="javascript/jquery.min.js"></script>
-        <script type="text/javascript" src="javascript/hexconvert.js"></script>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/hexConvert.js"></script>
     </body>
 </html>
