--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
     <head>
-        <meta charset="utf8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
         <title>中级计算器</title>
         <link rel="stylesheet" type="text/css" href="css/midCounter.css" />
     </head>
@@ -64,6 +64,6 @@
                 <td><input type="button" class="button" value="." /></td>
             </tr>
         </table>
-        <script type="text/javascript" src="javascript/midCounter.js"></script>
+        <script type="text/javascript" src="js/midCounter.js"></script>
     </body>
 </html>
