--- a/supCounter.html
+++ b/supCounter.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
     <head>
-        <meta http-equiv="Content-Type" content="text/html" charset="utf8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=utf8" />
         <title>supCounter</title>
-        <link rel="stylesheet" type="text/css" href="./css/supCounter.css" />
+        <link rel="stylesheet" type="text/css" href="css/supCounter.css" />
     </head>
     <body>
         <p>正在开发中...</p>
     </body>
-    <script type="text/javascript" src="./javascript/supCounter.js"></script>
+    <script type="text/javascript" src="js/supCounter.js"></script>
 </html>
